argo-k8s/adapt-namespace.yml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "adapt",
    "labels": {
      "name": "adapt"
    }
  }
}
